Fix expiry buttons on mobile

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_button-with-expiry.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_button-with-expiry.scss
@@ -1,5 +1,6 @@
 .wp-block-lf-buttons-with-expiry {
   display: flex;
+  flex-wrap: wrap;
 
   &.aligncenter {
     justify-content: center;
@@ -25,5 +26,9 @@
       background-color: #cccccc;
       color: #888888;
     }
+  }
+
+  @media(max-width: 767px) {
+    margin: auto auto 15px;
   }
 }
